src/main/java/com/example/tms/error/RefreshTokenException.java
package com.example.tms.error;

import java.text.MessageFormat;

public class RefreshTokenException extends RuntimeException {

    public RefreshTokenException(String token, String message) {
        super(MessageFormat.format("Ошибка обновления токена: {0} : {1}", token, message));
    }

    public RefreshTokenException(String message) {
        super(message);
    }
}
